new section finished

--- a/index.html
+++ b/index.html
@@ -174,7 +174,26 @@
           </div>
         </section>
         <!-- OUR SERVICES END -->
-
+        
+        <!-- NEWS SECTION START -->
+        <section class="news-section">
+          <div class="container">
+          <div class="news-section-content">
+            <div class="news-section-start">
+            <h2 class="news-section-title">Будь в курсе событий</h2>
+            <form action="https://echo.htmlacademy.ru/" method="get">
+              <label for="email">
+                <input class="input-email" type="email" name="email" required aria-label="emailingizni kiriting brat" placeholder="Укажите Ваш email адрес" maxlength="100" minlength="2">
+              </label>
+              <button class="new-input-btn" role="submit">Подписаться</button>
+            </form>
+          </div>
+          <img class="news-section-img" src="./images/dog.png" alt="dog" 
+          width="613" height="481">
+          </div>
+        </div>
+        </section>
+        <!-- NEWS SECTION END -->
         
       </main>
       <!-- SITE MAIN END -->
