--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                           <div class="calback_input_box">
                               <input class="name_input" type="text" name="name" aria-label="enter your name" placeholder="Ваше имя" required minlength="2" maxlength="100">
                               <input class="email_input" type="email" name="email" aria-label="enter your email" placeholder="Email для обратной связи" required>
-                                  <textarea class="text-area" name="" id="" required placeholder="Опишите Ваш вопрос."></textarea>
+                                  <textarea class="text-area" name="text-area" id="conmmit" required placeholder="Опишите Ваш вопрос."></textarea>
                               <button class="calback_btn" type="submit">Задать нам вопрос</button>
                           </div>
                       </form>
