--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
         <section class="veterinar-section">
           <div class="container">
             <div class="veterinar-section-wrapper">
-              <p class="veterinar-section-title">
+              <blockquote class="veterinar-section-title">
                 Наша ветеринарная клиника готова уделить максимум внимания Вам и Вашему питамцу. Здоровье и благополучие Ваших животных очень важно для нас и мы стремимся оказать наилучшую возможную ветеринарную помощь.
-              </p>
+              </blockquote>
               <h3 class="veterinar-section-desc">Оржоникидзевская Ветеринарная клиника</h3>
             </div>
           </div>
