--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                     <a class="site-header-end-item-link" href="#">Полезные Статьи</a>
                   </li>
                   <li class="site-header-end-item">
-                    <a class="site-header-end-item-link" href="#">FAQ</a>
+                    <a class="site-header-end-item-link" href="./faq.html">FAQ</a>
                   </li>
                   <li class="site-header-end-item">
                     <a class="site-header-end-item-link" href="./contact.html">Контакты</a>
