--- a/faq.html
+++ b/faq.html
@@ -63,7 +63,7 @@
                     <a class="site-header-end-item-link" href="#">Наши Услуги</a>
                   </li>
                   <li class="site-header-end-item">
-                    <a class="site-header-end-item-link" href="#">Полезные Статьи</a>
+                    <a class="site-header-end-item-link" href="./initial-inspection.html">Полезные Статьи</a>
                   </li>
                   <li class="site-header-end-item">
                     <a class="site-header-end-item-link" href="./faq.html">FAQ</a>
